apps/rabbitmq/components/istio/istio-virtualservice.yaml
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "VirtualService"
metadata:
  name: "rabbitmq"
spec:
  hosts:
    - "rabbitmq"
  gateways:
    - "istio-system/gateway"
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: "rabbitmq-management"
            port:
              number: 80
  tcp:
    - match:
        - port: 5671
      route:
        - destination:
            host: "rabbitmq-amqp"
            port:
              number: 5671
